--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mi Sitio Informativo</title>
+  <h1>ELEAM Casona de Esperanza - Parral</h1>
   <style>
     body {
       font-family: Arial, sans-serif;
