--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
 <header>
-  <h1>Bienvenidos a Mi Sitio Informativo</h1>
+<h1>ELEAM Casona de Esperanza - Parral</h1>
   <p>Un espacio simple, claro y directo</p>
 </header>
 
